# book-capture

./: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml
src/book_capture/: __init__.py  cli.py  export.py  extraction.py  ocr.py  traitement_image.py
tests/: __init__.py  conftest.py  test_export.py  test_extraction.py  test_ocr.py  test_traitement_image.py
